fix grid template overflow rendering bug

--- a/src/parts/Grid.css
+++ b/src/parts/Grid.css
@@ -33,7 +33,7 @@
 
 .item-grid .item .field {
   font-size: 1rem;
-  z-index: 1;
+  z-index: 3;
   padding: 0.1rem 0.2rem;
   text-shadow: 2px 2px black;
   background: rgba(0, 0, 0, 0.25);
@@ -82,7 +82,7 @@
 .item-grid .item .container-text.more {
   position: absolute;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   z-index: 2;
