--- a/src/parts/Item.css
+++ b/src/parts/Item.css
@@ -1,6 +1,6 @@
 #item {
   position: fixed;
-  z-index: 3;
+  z-index: 5;
   width: 100%;
   height: 100%;
   background-color: #1b1a26;
