--- a/src/parts/Range.css
+++ b/src/parts/Range.css
@@ -154,7 +154,7 @@ input[type="range"]::-webkit-slider-thumb {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.75);
   pointer-events: none;
-  z-index: 2;
+  z-index: 4;
 }
 
 .range-status .container {
